test_case/rust-lang_rust/8972_33561339.rs

Untitled.rs:12:25: 12:26 error: expected `;` but found `{`
Untitled.rs:12     let foo_clone = Foo { ..foo }; // error
                                       ^
